@@ -5,8 +5,10 @@ Changelog for mSearch2.
 - [mFilter2] Added filters "month" and "day".
 - [mFilter2] Ability to use one field multiple times in filters.
 - [mFilter2] Improved suggestions for more optimal processing.
-- [mFilter2] Fixed suggestions for dates filters.
 - [mFilter2] Ability to set aliases for filters.
+- [mFilter2] Aliases used for templates names.
+- [mFilter2] Fixed suggestions for dates filters.
+- [mFilter2] Fixed &showEmptyFilters in dates filters.
 
 1.2.7 pl
 ==============
